--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
         ],
         "skipLibCheck": true,
         "sourceMap": true,
-        "outDir": "./build",
+        "outDir": "./lib",
         "moduleResolution": "node",
         "removeComments": true,
         "noImplicitAny": true,
@@ -32,6 +32,6 @@
     },
     "exclude": [
         "node_modules",
-        "build"
+        "lib"
     ]
 }
