--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "tsc",
     "build:dev": "tsc -w",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "build-website": "webpack-cli -c ./src/website/webpack.config.js",
+    "build-website:dev": "webpack-cli -c ./src/website/webpack.config.js -w"
   },
   "repository": {
     "type": "git",
@@ -27,9 +29,17 @@
     "@storybook/addon-essentials": "^6.1.20",
     "@storybook/addon-links": "^6.1.20",
     "@storybook/react": "^6.1.20",
+    "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
+    "@types/styled-components": "^5.1.7",
     "babel-loader": "^8.2.2",
-    "typescript": "^4.2.2"
+    "styled-components": "^5.2.1",
+    "terser-webpack-plugin": "^5.1.1",
+    "ts-loader": "^8.0.17",
+    "typescript": "^4.2.2",
+    "webpack": "^5.24.2",
+    "webpack-cli": "^4.5.0"
   },
   "dependencies": {
     "react": "^17.0.1",
