feature/WTW-425 added gen command (#1)
Co-authored-by: Gonzalo Henríquez <henriquez@wiz.cl>

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "build:dev": "tsc -w",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
+    "pregen": "tsc ./src/react/gen.ts --outDir ./lib --esModuleInterop",
+    "gen": "node ./lib/gen.js"
     "build-website": "webpack-cli -c ./src/website/webpack.config.js",
     "build-website:dev": "webpack-cli -c ./src/website/webpack.config.js -w"
   },
