--- a/package.json
+++ b/package.json
@@ -1,50 +1,54 @@
 {
-  "name": "wtw-icons",
-  "version": "1.2.13",
-  "description": "The best open source icon library with an accessibility focus",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
-  "scripts": {
-    "build": "tsc",
-    "build:dev": "tsc -w",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
-    "pregen": "tsc ./src/react/gen.ts --outDir ./lib --esModuleInterop",
-    "gen": "node ./lib/gen.js",
-    "build-website": "webpack-cli -c ./src/website/webpack.config.js",
-    "build-website:dev": "webpack-cli -c ./src/website/webpack.config.js -w"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/wheeltheworld/wtw-icons.git"
-  },
-  "keywords": ["a11y", "accessibility", "icons"],
-  "author": "",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/wheeltheworld/wtw-icons/issues"
-  },
-  "homepage": "https://wheeltheworld.github.io/wtw-icons/",
-  "devDependencies": {
-    "@babel/core": "^7.13.1",
-    "@storybook/addon-actions": "^6.1.20",
-    "@storybook/addon-essentials": "^6.1.20",
-    "@storybook/addon-links": "^6.1.20",
-    "@storybook/react": "^6.1.20",
-    "@types/node": "^14.14.31",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.1",
-    "@types/styled-components": "^5.1.7",
-    "babel-loader": "^8.2.2",
-    "styled-components": "^5.2.1",
-    "terser-webpack-plugin": "^5.1.1",
-    "ts-loader": "^8.0.17",
-    "typescript": "^4.2.2",
-    "webpack": "^5.24.2",
-    "webpack-cli": "^4.5.0"
-  },
-  "dependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
-  }
+    "name": "wtw-icons",
+    "version": "1.2.13",
+    "description": "The best open source icon library with an accessibility focus",
+    "main": "lib/index.js",
+    "types": "lib/index.d.ts",
+    "scripts": {
+        "build": "tsc",
+        "build:dev": "tsc -w",
+        "storybook": "start-storybook -p 6006",
+        "build-storybook": "build-storybook",
+        "pregen": "tsc ./src/react/gen.ts --outDir ./lib --esModuleInterop",
+        "gen": "node ./lib/gen.js",
+        "build-website": "webpack-cli -c ./src/website/webpack.config.js",
+        "build-website:dev": "webpack-cli -c ./src/website/webpack.config.js -w --mode development"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/wheeltheworld/wtw-icons.git"
+    },
+    "keywords": [
+        "a11y",
+        "accessibility",
+        "icons"
+    ],
+    "author": "",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/wheeltheworld/wtw-icons/issues"
+    },
+    "homepage": "https://wheeltheworld.github.io/wtw-icons/",
+    "devDependencies": {
+        "@babel/core": "^7.13.1",
+        "@storybook/addon-actions": "^6.1.20",
+        "@storybook/addon-essentials": "^6.1.20",
+        "@storybook/addon-links": "^6.1.20",
+        "@storybook/react": "^6.1.20",
+        "@types/node": "^14.14.31",
+        "@types/react": "^17.0.2",
+        "@types/react-dom": "^17.0.1",
+        "@types/styled-components": "^5.1.7",
+        "babel-loader": "^8.2.2",
+        "styled-components": "^5.2.1",
+        "terser-webpack-plugin": "^5.1.1",
+        "ts-loader": "^8.0.17",
+        "typescript": "^4.2.2",
+        "webpack": "^5.24.2",
+        "webpack-cli": "^4.5.0"
+    },
+    "dependencies": {
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1"
+    }
 }
