--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "types": "lib/index.d.ts",
     "scripts": {
         "build": "tsc",
+        "build:prod": "tsc --project ./tsconfig-prod.json",
         "build:dev": "tsc -w",
         "storybook": "start-storybook -p 6006",
         "build-storybook": "build-storybook",
