--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,6 +14,7 @@ jobs:
                   node-version: 14
                   registry-url: https://registry.npmjs.org/
             - run: yarn
+            - run: yarn gen
             - run: yarn build:prod
             - run: npm publish --access-public
               env:
