--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
     "name": "wtw-icons",
     "version": "1.34.2",
     "description": "The best open source icon library with an accessibility focus",
-    "main": "lib/index.js",
-    "types": "lib/index.d.ts",
+    "main": "index.js",
+    "types": "index.d.ts",
     "scripts": {
         "build": "tsc",
         "build:prod": "tsc --project ./tsconfig-prod.json",
