--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "build-website": "webpack-cli -c ./src/website/webpack.config.js",
         "build-website:dev": "webpack-cli -c ./src/website/webpack.config.js -w --mode development",
         "prepare": "tsc --project ./tsconfig-prod.json",
-        "postinstall": "echo 'POST' > post.txt"
+        "postinstall": "tsc --project ./tsconfig-prod.json"
     },
     "repository": {
         "type": "git",
