--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "gen:icons": "node ./lib/gen/genIcons.js",
         "build-website": "webpack-cli -c ./src/website/webpack.config.js",
         "build-website:dev": "webpack-cli -c ./src/website/webpack.config.js -w --mode development",
-        "prepare": "echo 'POST' > post2.txt"
+        "postinstall": "tsc --project ./tsconfig-prod.json"
     },
     "repository": {
         "type": "git",
