--- a/package.json
+++ b/package.json
@@ -2,11 +2,8 @@
     "name": "wtw-icons",
     "version": "1.44.0",
     "description": "The best open source icon library with an accessibility focus",
-    "main": "dist/index.js",
-    "types": "dist/index.d.ts",
-    "files": [
-        "dist"
-    ],
+    "main": "index.js",
+    "types": "index.d.ts",
     "scripts": {
         "build": "tsc",
         "build:prod": "tsc --project ./tsconfig-prod.json",
