--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "wtw-icons",
-    "version": "1.44.1-beta",
+    "version": "1.44.0",
     "description": "The best open source icon library with an accessibility focus",
     "main": "index.js",
     "types": "index.d.ts",
@@ -18,6 +18,9 @@
         "build-website:dev": "webpack-cli -c ./src/website/webpack.config.js -w --mode development",
         "prepare": "tsc --project ./tsconfig-prod.json"
     },
+    "files": [
+        "lib"
+    ],
     "repository": {
         "type": "git",
         "url": "git+https://github.com/wheeltheworld/wtw-icons.git"
@@ -57,6 +60,7 @@
     },
     "dependencies": {
         "react": "^17.0.1",
-        "react-dom": "^17.0.1"
+        "react-dom": "^17.0.1",
+        "wtw-icons": "^1.44.0"
     }
 }
