--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "prepare": "microbundle-crl --no-compress --format modern,cjs"
     },
     "files": [
-        "lib"
+        "dist"
     ],
     "repository": {
         "type": "git",
@@ -59,6 +59,7 @@
         "webpack-cli": "^4.5.0"
     },
     "dependencies": {
+        "microbundle-crl": "^0.13.11",
         "react": "^17.0.1",
         "react-dom": "^17.0.1"
     }
