--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
     "name": "wtw-icons",
     "version": "1.44.0",
     "description": "The best open source icon library with an accessibility focus",
-    "main": "index.js",
-    "types": "index.d.ts",
+    "main": "dist/index.js",
+    "module": "dist/index.modern.js",
     "scripts": {
         "build": "microbundle-crl --no-compress --format modern,cjs",
         "build:prod": "tsc --project ./tsconfig-prod.json",
