--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,10 @@
 {
     "compilerOptions": {
         "target": "es5",
-        "lib": [
-            "dom",
-            "es6",
-            "es2017",
-            "esnext.asynciterable"
-        ],
+        "lib": ["dom", "es6", "es2017", "esnext.asynciterable"],
         "skipLibCheck": true,
         "sourceMap": true,
-        "outDir": "./lib",
+        "outDir": "dist",
         "moduleResolution": "node",
         "removeComments": true,
         "noImplicitAny": true,
@@ -30,10 +25,5 @@
         "declaration": true,
         "jsx": "react"
     },
-    "exclude": [
-        "node_modules",
-        "lib",
-        "src/stories",
-        "src/website"
-    ]
+    "exclude": ["node_modules", "lib", "src/stories", "src/website"]
 }
