--- a/tsconfig-prod.json
+++ b/tsconfig-prod.json
@@ -4,8 +4,7 @@
         "lib": ["dom", "es6", "es2017", "esnext.asynciterable"],
         "skipLibCheck": true,
         "sourceMap": true,
-        "outDir": "dist",
-        "module": "esnext",
+        "outDir": "lib",
         "moduleResolution": "node",
         "removeComments": true,
         "noImplicitAny": true,
