--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,30 @@
 {
     "compilerOptions": {
+        "target": "es5",
         "outDir": "dist",
         "module": "esnext",
         "lib": ["dom", "esnext"],
-        "moduleResolution": "node",
-        "jsx": "react",
+        "skipLibCheck": true,
         "sourceMap": true,
-        "declaration": true,
-        "esModuleInterop": true,
-        "noImplicitReturns": true,
-        "noImplicitThis": true,
+        "moduleResolution": "node",
+        "removeComments": true,
         "noImplicitAny": true,
+        "forceConsistentCasingInFileNames": true,
+        "strict": true,
         "strictNullChecks": true,
-        "suppressImplicitAnyIndexErrors": true,
+        "strictFunctionTypes": true,
+        "noImplicitThis": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
-        "allowSyntheticDefaultImports": true
+        "noImplicitReturns": true,
+        "noFallthroughCasesInSwitch": true,
+        "allowSyntheticDefaultImports": true,
+        "esModuleInterop": true,
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+        "resolveJsonModule": true,
+        "declaration": true,
+        "jsx": "react"
     },
-    "include": ["src"],
-    "exclude": ["node_modules", "dist", "example"]
+    "exclude": ["node_modules", "lib", "src/stories", "src/website"]
 }
