--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "source": "src/react/index.ts",
     "module": "dist/index.modern.js",
     "scripts": {
-        "prepare": "microbundle-crl --no-compress --format modern,cjs",
         "build": "microbundle-crl --no-compress --format modern,cjs",
         "build:prod": "microbundle-crl --no-compress --format modern,cjs",
         "watch": "tsc -w",
@@ -17,7 +16,8 @@
         "gen:helpers": "node ./lib/gen/genHelpers.js",
         "gen:icons": "node ./lib/gen/genIcons.js",
         "build-website": "webpack-cli -c ./src/website/webpack.config.js",
-        "build-website:dev": "webpack-cli -c ./src/website/webpack.config.js -w --mode development"
+        "build-website:dev": "webpack-cli -c ./src/website/webpack.config.js -w --mode development",
+        "preinstall": "microbundle-crl --no-compress --format modern,cjs"
     },
     "files": [
         "dist"
