--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "scripts": {
+        "prepare": "tsc",
         "build": "tsc",
         "build:prod": "tsc --project ./tsconfig-prod.json",
         "watch": "tsc -w",
@@ -15,8 +16,7 @@
         "gen:helpers": "node ./lib/gen/genHelpers.js",
         "gen:icons": "node ./lib/gen/genIcons.js",
         "build-website": "webpack-cli -c ./src/website/webpack.config.js",
-        "build-website:dev": "webpack-cli -c ./src/website/webpack.config.js -w --mode development",
-        "prepare": "tsc --project ./tsconfig-prod.json"
+        "build-website:dev": "webpack-cli -c ./src/website/webpack.config.js -w --mode development"
     },
     "files": [
         "dist"
