--- a/tsconfig-prod.json
+++ b/tsconfig-prod.json
@@ -4,7 +4,7 @@
         "lib": ["dom", "es6", "es2017", "esnext.asynciterable"],
         "skipLibCheck": true,
         "sourceMap": true,
-        "outDir": "lib",
+        "outDir": "dist",
         "moduleResolution": "node",
         "removeComments": true,
         "noImplicitAny": true,
@@ -25,5 +25,5 @@
         "declaration": true,
         "jsx": "react"
     },
-    "exclude": ["node_modules", "lib", "src/stories", "src/website"]
+    "exclude": ["src/stories", "src/website"]
 }
