--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
         "build": "tsc",
         "build:prod": "tsc --project ./tsconfig-prod.json",
         "watch": "tsc -w",
-        "dev": "start-storybook -p 6006",
         "storybook": "start-storybook -p 6006",
         "build-storybook": "build-storybook",
         "pregen": "tsc ./src/react/gen/* --outDir ./lib/gen/ --esModuleInterop",
@@ -51,13 +50,11 @@
         "styled-components": "^5.2.1",
         "terser-webpack-plugin": "^5.1.1",
         "ts-loader": "^8.0.17",
-        "react": "^17.0.1",
-        "react-dom": "^17.0.1",
         "typescript": "^4.2.2",
         "webpack": "^5.24.2",
         "webpack-cli": "^4.5.0"
     },
-    "peerDependencies": {
+    "dependencies": {
         "react": "^17.0.1",
         "react-dom": "^17.0.1"
     }
