--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "wtw-icons",
-    "version": "2.17.0",
+    "version": "2.17.1",
     "description": "The best open source icon library with an accessibility focus",
     "main": "index.js",
     "types": "index.d.ts",
@@ -8,6 +8,7 @@
         "build": "tsc",
         "build:prod": "tsc --project ./tsconfig-prod.json",
         "watch": "tsc -w",
+        "dev": "start-storybook -p 6006",
         "storybook": "start-storybook -p 6006",
         "build-storybook": "build-storybook",
         "pregen": "tsc ./src/react/gen/* --outDir ./lib/gen/ --esModuleInterop",
@@ -47,6 +48,8 @@
         "@types/styled-components": "^5.1.7",
         "babel-loader": "^8.2.2",
         "cheerio": "^1.0.0-rc.6",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1",
         "styled-components": "^5.2.1",
         "terser-webpack-plugin": "^5.1.1",
         "ts-loader": "^8.0.17",
@@ -54,7 +57,7 @@
         "webpack": "^5.24.2",
         "webpack-cli": "^4.5.0"
     },
-    "dependencies": {
+    "peerDependencies": {
         "react": "^17.0.1",
         "react-dom": "^17.0.1"
     }
