chore: NODE_OPTIONS legacy provider from npm scripts

--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
         "build": "tsc",
         "build:prod": "tsc --project ./tsconfig-prod.json",
         "watch": "tsc -w",
-        "dev": "start-storybook -p 6006",
-        "storybook": "start-storybook -p 6006",
-        "build-storybook": "build-storybook",
+        "dev": "NODE_OPTIONS=\"--openssl-legacy-provider\" start-storybook -p 6006",
+        "storybook": "NODE_OPTIONS=\"--openssl-legacy-provider\" start-storybook -p 6006",
+        "build-storybook": "NODE_OPTIONS=\"--openssl-legacy-provider\" build-storybook",
         "pregen": "tsc ./src/react/gen/* --outDir ./lib/gen/ --esModuleInterop",
         "gen": "yarn gen:icons && yarn gen:helpers",
         "gen:helpers": "node ./lib/gen/genHelpers.js",
